tests/compile_fail/resolver_duplicate_base_unit.rs
#![allow(incomplete_features)]
#![feature(generic_const_exprs, adt_const_params)]

use diman::unit_system;

unit_system!(
    quantity_type Quantity;
    dimension_type Dimension;
    dimension Length;
    #[base(Length)]
    unit meters: Length;
    #[base(Length)]
    unit parsec: Length;
);

fn main() {}
